[FIND-1076] Prevent overflow flickering on update
[rev: none]

Results list widget with overflowing items would briefly display these
items post-update and promptly hide them. Resolved by

* making the call to hideOverflow() to be no longer made via
  Underscore.js's defer() method. This is no longer necessary, as
  saved-search-widget controls the order of rendering by chaining
  promises. The issue was that hideOverflow would not work unless the
  widget had been fully rendered.
* inverting the logic to only show results that are in the frame, rather
  than show all of them and subsequently hide overflow.

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -2422,7 +2422,7 @@ h4.similar-dates-message {
       }
       .search-result {
         flex: 1 1 auto;
-        &.out-of-view {
+        &:not(.in-view) {
           visibility: hidden;
         }
       }
